# cr2db

./: .gitignore  .gitmodules  .travis.yml  .wakatime-project  CMakeLists.txt  README.md  atl-cli.sln  atl-cli.vcxproj  atl-cli.vcxproj.filters  atlcli.c  building.c  building.h  cgi.c  cgi.h  commands.txt  config.c  config.h  cr2db.c  cr2json.c  crdata.c  crdata.h  crdb.c  crdb.h  crfile.c  crfile.h  crschema.sql  crservice.c  database.c  database.h  echocgi.c  export.c  export.h  faction.c  faction.h  gamedata.c  gamedata.h  gamedb.c  gamedb.h  gettext.h  hellocgi.c  (+23 more)
cmake/: FindCJSON.cmake  FindFcgi.cmake
res/: buildings.json  races.json  ships.json  terrains.json
s/: build  cppcheck  travis-build
